--- a/index.css
+++ b/index.css
@@ -205,7 +205,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* padding: 0.5rem; */
+    padding: 0.5rem;
     position:relative;
     overflow:hidden;
 }
