--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ body {
     background: #fff;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
     padding: 50px;
     /* background: #2a5298 ; */
@@ -255,7 +255,7 @@ body {
     max-width: 1100px;
     overflow: auto;
     margin: auto;
-    /* padding: 2rem; */
+    padding: 2rem;
 }
 
 .projectcard {
@@ -263,6 +263,8 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.8rem;
     margin-bottom: 4rem;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
 
 
 
@@ -359,18 +361,23 @@ a .btn-git:focus {
 } */
 }
 
-@media only screen and (max-width:380px) {
+@media only screen and (max-width:390px) {
     .projects-container {
-        width: 360px;
+        width: 100%;
     }
 
     .main-container {
-        margin: 5px;
-        padding: 10px;
+        width:90%;
+        /* margin: 5px; */
+        padding:5px;
+    
     }
 
     .main-container .portfolio-content {
         align-items: center;
+        padding:0px;
+        order:2;
+
     }
 
     .main-container .portfolio-content h1 {
