--- a/index.css
+++ b/index.css
@@ -93,6 +93,7 @@ body {
     margin: auto;
     height: 90vh;
     padding: 20px;
+    margin-top:20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
@@ -116,6 +117,9 @@ body {
     font-size: 8vh !important;
     color: #2a5298;
     /* color:#fff; */
+  
+    
+
 
 }
 
@@ -129,16 +133,15 @@ body {
 .main-container .portfolio-image {
 
     background: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+
+    
 
 }
 
 .main-container .portfolio-image img {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -360,7 +363,11 @@ a .btn-git:focus {
         display:flex;
         flex-direction:column;
         padding: 5px;
+        grid-row-gap: 2rem;
 
+    }
+    .navbar-nav .nav-link{
+        padding:10px;
     }
 
     .main-container .portfolio-content {
