--- a/index.css
+++ b/index.css
@@ -14,6 +14,18 @@ body {
 
 }
 
+.circlemain {
+    position: absolute;
+    top: -80px;
+    left: -80px;
+    width: 50vh;
+    height: 50vh;
+    /* background:#2a5298 ; */
+    background: #fff;
+    opacity: 0.1;
+    border-radius: 50%;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -46,16 +58,16 @@ body {
 }
 
 .navbar .navbar-nav .nav-link {
-    color: #1D4350;
+    color: #fff;
     font-weight: bold;
     margin-right: 20px !important;
-
+    transition: .3s  all ease-in-out;
 
 }
 
-.navbar .navbar-nav .nav-link:hover {
-    background: #1D4350;
-    color: #fff;
+.navbar .navbar-nav .nav-link:hover, .navbar .navbar-nav .nav-link:focus {
+    background: #fff;
+    color: #2a5298;
 }
 
 .name::after {
@@ -263,7 +275,9 @@ body {
 
 
 
+
 }
+
 
 
 
@@ -343,8 +357,8 @@ a .btn-git:focus {
         /* grid-row-gap: 2rem; */
 
     }
+
     .main-container .portfolio-content {
-        align-items: center;
         padding: 0px;
         order: 2;
         display: flex;
@@ -389,7 +403,7 @@ a .btn-git:focus {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin:80px 0px;
+        margin: 80px 0px;
 
     }
 
