--- a/index.css
+++ b/index.css
@@ -179,7 +179,7 @@ body {
     font-size: 3rem;
     margin-bottom: 2rem;
     line-height: 1.2;
-    color: #0b8793;
+    color: #2a5298;
     font-weight: bold;
     position: relative
 }
@@ -190,10 +190,10 @@ body {
     height: 50vh;
     left: -110px;
     top: -150px;
-    background: #12c2e9;
+    background: #2a5298;
     opacity: 0.2;
     border-radius: 50%;
-    z-index: -1;
+    /* z-index: -1; */
 
 
 }
@@ -204,10 +204,10 @@ body {
     height: 100vh;
     right: -200px;
     top: -530px;
-    background: #12c2e9;
+    background: #2a5298;
     opacity: 0.2;
     border-radius: 50%;
-    z-index: -1;
+    /* z-index: -1; */
     overflow: none;
 
 
@@ -220,8 +220,8 @@ body {
     top: 110%;
     left: 30%;
     content: '';
-    background: aqua;
-    border: 2px solid #0b8793;
+    background: #2a5298;
+    border: 2px solid #2a5298;
 }
 
 .main-projects h1::before {
@@ -231,7 +231,7 @@ body {
     top: -50px;
     left: -115px;
     content: '';
-    background: #12c2e9;
+    background: #2a5298;
     opacity: .1;
     border-radius: 50%;
 
@@ -296,7 +296,7 @@ body {
 
 .btn-git {
     border-radius: 10px;
-    background: #1BCEAE;
+    background: #2a5298;
     color: #fff;
     margin: 10px;
     margin-left: -3px;
@@ -380,6 +380,9 @@ a .btn-git:focus {
         width: 100%;
     }
 
+    .circlemain{
+        display:none;
+    }
     .main-container {
         width: 90%;
         /* margin: 5px; */
