--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    height: 700vh;
+    height:300vh;
     scroll-behavior: smooth;
     box-sizing: border-box;
     overflow-x: hidden;
@@ -18,12 +18,13 @@ body {
     position: absolute;
     top: -80px;
     left: -80px;
-    width: 50vh;
-    height: 50vh;
+    width: 35vh;
+    height: 35vh;
     /* background:#2a5298 ; */
     background: #fff;
-    opacity: 0.1;
+    opacity: 1;
     border-radius: 50%;
+    z-index:-1;
 }
 
 * {
@@ -87,7 +88,7 @@ body {
 
 
 .navbar-toggler {
-    background-color: #12c2e9 !important;
+    background-color: #2a5298 !important;
     border: none !important;
     outline: none !important;
     padding: 0px 5px !important;
@@ -376,13 +377,16 @@ a .btn-git:focus {
 
 
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:768px) {
     .projects-container {
         width: 100%;
     }
 
     .circlemain{
-        display:none;
+        width:20vh;
+        height:20vh;
+        top:-50px;
+        left:-50px;
     }
     .main-container {
         width: 90%;
@@ -419,4 +423,14 @@ a .btn-git:focus {
         font-size: 20px !important;
     }
 
+}
+
+
+@media only screen and (max-width:992px)
+{
+    .portfolio-content{
+        margin:60px 0;
+    }
+
+    
 }
