--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
     height: 35vh;
     /* background:#2a5298 ; */
     background: #fff;
-    opacity: 1;
+    opacity: 0.5;
     border-radius: 50%;
     z-index:-1;
 }
@@ -262,7 +262,8 @@ body {
 
 .projects-container {
     max-width: 1100px;
-    overflow: auto;
+    /* overflow: auto; */
+    height:180vh;
     margin: auto;
     padding: 2rem;
 }
