--- a/index.css
+++ b/index.css
@@ -22,9 +22,9 @@ body {
     height: 35vh;
     /* background:#2a5298 ; */
     background: #fff;
-    opacity: 1;
+    opacity: 0;
     border-radius: 50%;
-    z-index:-1;
+    z-index:-1000;
 }
 
 * {
@@ -260,6 +260,7 @@ body {
 
 
 
+
 .projects-container {
     max-width: 1100px;
     /* overflow: auto; */
@@ -363,7 +364,7 @@ a .btn-git:focus {
 
     .main-container .portfolio-content {
         padding: 0px;
-        order: 2;
+        order: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -407,12 +408,17 @@ a .btn-git:focus {
     .main-container .portfolio-content {
         align-items: center;
         padding: 0px;
-        order: 2;
+        order: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: 80px 0px;
+
+    }
+    .main-container .portfolio-image {
+        
+        margin-bottom: 80px;
 
     }
 
