--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     scroll-behavior: smooth;
     box-sizing: border-box;
     overflow-x: hidden;
-    background: #000;
+    background: rgb(54, 53, 53);
 
 
 }
@@ -173,8 +173,9 @@ body {
 }
 
 .project-image {
-    width: 100%;
-    height: 300px;
+    
+    width: 200px;
+    height: 200px;
 }
 
 .main-projects h1 {
@@ -243,9 +244,8 @@ body {
 
 
 .projectcard>div {
-    padding: 0.8rem;
-    background: #000;
-    /* border-radius: 5px; */
+    padding: 3rem;
+
 
 }
 
@@ -266,20 +266,21 @@ body {
     /* overflow: auto; */
     height:180vh;
     margin: auto;
-    padding: 2rem;
+    padding: 10rem;
+    display:grid;
+    
 }
 
 .projectcard {
+    border-radius:10px;
+    background: #2a5298;
+    width:100%;
+    height:50vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0.8rem;
+    grid-gap: 1em;
     margin-bottom: 4rem;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-
-
-
-
-
 }
 
 
@@ -300,8 +301,8 @@ body {
 
 .btn-git {
     border-radius: 7px;
-    background: #2a5298;
-    color: #fff;
+    background: #fff;
+    color: #000;
     margin: 10px;
     margin-left: -3px;
     width: 120px;
@@ -312,7 +313,7 @@ body {
 
 .btn-git:hover {
     /* box-shadow: 0px 4px 2px 1px rgba(255, 255, 255, 0.25); */
-    background: #1f4037;
+    background: rgb(226, 229, 238);
     /* opacity:0.8; */
 
 }
@@ -333,6 +334,7 @@ a .btn-git:focus {
 
     .projectcard {
         display: block;
+        padding:0.8rem;
     }
 
     .projects-container {
