--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    height:200vh;
+    height:100vh;
     overflow: auto;
     scroll-behavior: smooth;
     box-sizing: border-box;
@@ -149,8 +149,8 @@ body {
 
 
 .main-container .portfolio-image img {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
 }
 
 
@@ -264,16 +264,13 @@ body {
     max-width: 900px;
     /* overflow: auto; */
     border-radius: 10px;
-    height:100vh;
+    height:200vh;
     margin: auto;
     padding: 1rem;
     display:grid;
-    justify-content: center;
+    /* justify-content: center; */
     /* opacity:0.5 !important; */
 
-    
-    
-    
 }
 
 .projectcard {
@@ -292,7 +289,7 @@ body {
 
 
 .projectcard h3 {
-    color: #fff;
+    color: #bce0e7;
     /* font-weight:700px; */
 
     margin-bottom: 1rem;
@@ -332,9 +329,9 @@ a .btn-git:focus {
     border: none;
 }
 
-@media only screen and (max-width:992px) {
+@media only screen and (max-width:1200px) {
     .text {
-        font-size: 15px;
+        font-size: 10px;
     }
 
     .profile .card {
@@ -408,15 +405,45 @@ a .btn-git:focus {
     padding:3px;
 }
 
+i{
+    font-size:20px;
+    color:#fff;
+    cursor:pointer;
+    border:1px solid #fff;
+    padding:10px;
+}
+
+i:hover{
+
+    color:#495488;
+
+  
+
+}
+
+i:active{
+
+    color:#495488;
+}
 
 
-@media only screen and (max-width:768px) {
+
+@media only screen and (max-width:768px)
+{
+    .main-container{
+        height:50vh;
+    }
+}
+
+
+
+@media only screen and (max-width:992px) {
     .projects-container {
         width: 100%;
     
     }
     .project-card{
-        height:800px;
+        height:700px;
         display:block;
         justify-content: center;
         align-items: center;
@@ -430,6 +457,7 @@ a .btn-git:focus {
         top:-50px;
         left:-50px;
     }
+
     .main-container {
         width: 90%;
         /* margin: 5px; */
