--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body {
 
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    height:100vh;
-    overflow: auto;
+    /* overflow: auto; */
     scroll-behavior: smooth;
     box-sizing: border-box;
     overflow-x: hidden;
@@ -106,7 +105,7 @@ body {
 .main-container {
     width: 100%;
     margin: auto;
-    height: 80vh;
+    height: 60vh;
     padding: 20px;
     margin-top: 20px;
     display: grid;
@@ -373,7 +372,7 @@ a .btn-git:focus {
         /* margin: 5px; */
         display: flex;
         flex-direction: column;
-        height: auto;
+        height: 70vh;
         padding: 5px;
         /* grid-row-gap: 2rem; */
 
@@ -436,7 +435,7 @@ i:active{
 
 @media only screen and (max-width:768px)
 {
-    .main-container{
+    .maindiv{
         height:70vh;
     }
     i{
@@ -472,8 +471,8 @@ i:active{
         /* margin: 5px; */
         display: flex;
         flex-direction: column;
-        height: auto;
         padding: 5px;
+        height:50vh;
         /* grid-row-gap: 2rem; */
 
     }
