--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
-
+html{
+    height:110vh;
+}
 body {
   font-family: "Poppins", sans-serif;
   width: 100%;
+  height:110vh;
   scroll-behavior: smooth;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -52,7 +55,7 @@ body {
 .main-container {
   width: 100%;
   margin: auto;
-  height: 50vh;
+  height: 80vh;
   padding: 20px;
   margin-top: 20px;
   display: grid;
@@ -252,8 +255,6 @@ a .btn-git:active {
 
     display: block;
     height: 450px;
-    justify-content: center;
-    align-items: center;
   }
 
   .projectcard .project-content {
@@ -262,7 +263,8 @@ a .btn-git:active {
 
   .projects-container {
     max-width: 970px;
-    height: 80vh;
+    height: 100vh;
+  
     margin: 0;
   }
 
@@ -283,7 +285,7 @@ a .btn-git:active {
     /* margin: 5px; */
     display: flex;
     flex-direction: column;
-    height: 50vh;
+    height: 100vh;
     padding: 5px;
     /* grid-row-gap: 2rem; */
   }
@@ -314,14 +316,9 @@ a .btn-git:active {
   border: 1px solid #fff;
   padding: 10px;
   border-radius:50%;
-  box-shadow:   inset 0 0 50px #fff,      /* inner white */
-  inset 20px 0 80px #f0f,   /* inner left magenta short */
-  inset -20px 0 80px #0ff,  /* inner right cyan short */
-  inset 20px 0 300px #f0f,  /* inner left magenta broad */
-  inset -20px 0 300px #0ff, /* inner right cyan broad */
-  0 0 50px #fff,            /* outer white */
-  -10px 0 80px #f0f,        /* outer left magenta */
-  10px 0 80px #0ff;
+  box-sizing: border-box;
+
+
 }
 
 i:hover {
@@ -333,7 +330,7 @@ i:active {
   color: #495488;
 }
 
-.contact-header {
+.header {
   color: #9fa4c4;
 }
 
@@ -341,7 +338,7 @@ i:active {
   .maindiv {
     height: 50vh;
   }
-  i {
+  .contact-icons {
     margin: 20px 20px;
   }
 }
@@ -349,12 +346,17 @@ i:active {
 @media only screen and (max-width: 992px) {
   .projects-container {
     width: 100%;
+    height: 80vh;
+    display:grid;
+    grid-template-columns: repeat(1,1fr);
+    justify-content: center;
+    margin: 0;
   }
   .project-card {
     height: 700px;
     display: block;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     background: #495488;
   }
 
@@ -371,7 +373,7 @@ i:active {
     display: flex;
     flex-direction: column;
     padding: 5px;
-    height: 50vh;
+    height: 70vh;
     /* grid-row-gap: 2rem; */
   }
 
@@ -390,7 +392,7 @@ i:active {
     margin: 80px 0px;
   }
   .main-container .portfolio-image {
-    margin-bottom: 80px;
+    margin-bottom: 30px;
   }
 
   .main-container .portfolio-content h1 {
@@ -400,10 +402,24 @@ i:active {
   .main-container .portfolio-content h3 {
     font-size: 20px !important;
   }
+  .projectcard .project-content {
+    height: 200px;
+  }
 }
 
 @media only screen and (max-width: 992px) {
   .portfolio-content {
     margin: 60px 0;
   }
+}
+
+@media only screen and(min-width:420px)
+{
+    .main-container{
+        height:50vh;
+    }
+    .project-card{
+
+        width:400px;
+    }
 }
