--- a/style.css
+++ b/style.css
@@ -228,22 +228,21 @@ a .btn-git:active {
   border: none;
 }
 
-@media only screen and (min-width: 1200px) {
-  .circle1 {
-    width: 40vh;
-    height: 40vh;
-  }
+@media only screen and(min-width:420px) and(max-width:650px)
+{
+    .main-container{
+        height:30vh;
+    }
+    .project-card{
 
-  .circle2 {
-    width: 70vh;
-    height: 70vh;
-    /* display: none; */
-  }
+        width:400px;
+    }
 }
+
 
 @media only screen and (max-width: 1200px) {
   .text {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   .profile .card {
@@ -260,6 +259,7 @@ a .btn-git:active {
   .projectcard .project-content {
     height: 400px;
   }
+
 
   .projects-container {
     max-width: 970px;
@@ -321,9 +321,26 @@ a .btn-git:active {
 
 }
 
-i:hover {
+.download-icons{
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  border: 1px solid #fff;
+  padding: 10px;
+  border-radius:50%;
+  box-sizing: border-box;
+
+    
+}
+
+.contact-icons:hover {
   color: #495488;
   border-color: #495488;
+}
+
+.download-icons:hover {
+  color: #c471ed;
+  border-color: #c471ed;
 }
 
 i:active {
@@ -334,14 +351,7 @@ i:active {
   color: #9fa4c4;
 }
 
-@media only screen and (max-width: 768px) {
-  .maindiv {
-    height: 50vh;
-  }
-  .contact-icons {
-    margin: 20px 20px;
-  }
-}
+
 
 @media only screen and (max-width: 992px) {
   .projects-container {
@@ -405,21 +415,32 @@ i:active {
   .projectcard .project-content {
     height: 200px;
   }
-}
 
-@media only screen and (max-width: 992px) {
   .portfolio-content {
     margin: 60px 0;
   }
 }
 
-@media only screen and(min-width:420px)
-{
-    .main-container{
-        height:50vh;
+@media only screen and (max-width: 768px) {
+    .maindiv {
+      height: 50vh;
     }
-    .project-card{
+    .contact-icons {
+      margin: 20px 20px;
+    }
+  }
 
-        width:400px;
+
+@media only screen and (min-width: 1200px) {
+    .circle1 {
+      width: 40vh;
+      height: 40vh;
     }
-}
+  
+    .circle2 {
+      width: 70vh;
+      height: 70vh;
+      /* display: none; */
+    }
+  }
+
